--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodaysTodo">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SecurityActivity" />
+        <activity android:name=".SecurityPopupActivity" android:theme="@style/Theme.AppCompat.Dialog" />
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".DoneActivity"/>
+        <activity android:name=".SecurityActivity"/>
+        <activity android:name=".CalendarActivity"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,5 +22,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
